--- a/CKD_PENELITIAN.ipynb
+++ b/CKD_PENELITIAN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPblnIM3jgPUyaZOhF9Y3mO",
+      "authorship_tag": "ABX9TyMY0qESg5Qc9ChvY0UWhNdu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "height": 273
         },
         "id": "2JnGoE9IATRd",
-        "outputId": "55474cdf-292d-45d1-8268-5adb50078c12"
+        "outputId": "b18b7127-58ae-44ce-cdf1-b5afbf00913a"
       },
       "outputs": [
         {
@@ -88,7 +88,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-628a542e-ded1-41ed-9035-2afff27327dc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3cf1754f-1b09-4b70-8df4-d150005d4a4f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -258,7 +258,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-628a542e-ded1-41ed-9035-2afff27327dc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3cf1754f-1b09-4b70-8df4-d150005d4a4f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -310,12 +310,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-628a542e-ded1-41ed-9035-2afff27327dc button.colab-df-convert');\n",
+              "        document.querySelector('#df-3cf1754f-1b09-4b70-8df4-d150005d4a4f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-628a542e-ded1-41ed-9035-2afff27327dc');\n",
+              "        const element = document.querySelector('#df-3cf1754f-1b09-4b70-8df4-d150005d4a4f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -335,8 +335,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-683d7dd2-06d8-4500-b56f-5699e95c5b72\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-683d7dd2-06d8-4500-b56f-5699e95c5b72')\"\n",
+              "    <div id=\"df-c92e07ec-460a-474d-b99e-5648d38c413f\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c92e07ec-460a-474d-b99e-5648d38c413f')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -455,7 +455,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-683d7dd2-06d8-4500-b56f-5699e95c5b72 button');\n",
+              "            document.querySelector('#df-c92e07ec-460a-474d-b99e-5648d38c413f button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -499,7 +499,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w1ArbzqEA6N_",
-        "outputId": "d1341ba0-f569-417e-c3d6-337bf41e3e5f"
+        "outputId": "fe6315f5-6d2b-4614-f6a8-9f2cf26a4d4a"
       },
       "execution_count": 2,
       "outputs": [
@@ -524,7 +524,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lsICyPmxA-Vq",
-        "outputId": "b1b8fca7-17fb-4825-8e76-b7d25e8d621d"
+        "outputId": "30e997ee-a724-4b71-fa30-aef31a16348f"
       },
       "execution_count": 3,
       "outputs": [
@@ -606,7 +606,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eBUFcxEXBDkM",
-        "outputId": "34bb90e4-ecf3-4d2c-d449-a2d655660eac"
+        "outputId": "19991bc5-940f-452c-fdd3-743b3190f573"
       },
       "execution_count": 4,
       "outputs": [
@@ -617,6 +617,37 @@
             "\n",
             "Kolom yang memiliki missing value:\n",
             "Index([], dtype='object')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Hitung jumlah pasien berdasarkan Diagnosis\n",
+        "jumlah_diagnosis = df['Diagnosis'].value_counts()\n",
+        "\n",
+        "print(\"Jumlah pasien berdasarkan Diagnosis:\")\n",
+        "print(jumlah_diagnosis)"
+      ],
+      "metadata": {
+        "id": "UIR8CymtrnWH",
+        "outputId": "62a83807-03c1-490e-94ff-5627eef67b27",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jumlah pasien berdasarkan Diagnosis:\n",
+            "Diagnosis\n",
+            "1    1524\n",
+            "0     135\n",
+            "Name: count, dtype: int64\n"
           ]
         }
       ]
